--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@commitlint/config-conventional": "^20.0.0",
     "@commitlint/types": "^20.0.0",
     "@eslint/js": "^9.39.0",
+    "@eslint/json": "^0.13.2",
     "@eslint/markdown": "^7.5.0",
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-terser": "^0.4.4",
@@ -25,6 +26,7 @@
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/node": "^24.9.2",
     "eslint": "^9.39.0",
+    "globals": "^16.5.0",
     "husky": "^9.1.7",
     "jiti": "^2.6.1",
     "knip": "^5.66.4",
