chore: move imports style checking to eslint

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,4 @@
 {
   "trailingComma": "none",
-  "arrowParens": "avoid",
-  "plugins": ["prettier-plugin-unused-imports-configurable", "@trivago/prettier-plugin-sort-imports"],
-  "importOrderParserPlugins": ["typescript", "decorators-legacy"]
+  "arrowParens": "avoid"
 }
