--- a/package.json
+++ b/package.json
@@ -23,16 +23,16 @@
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.3.0",
-    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/node": "^24.10.4",
     "eslint": "^9.39.2",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-unused-imports": "^4.3.0",
     "globals": "^16.5.0",
     "husky": "^9.1.7",
     "jiti": "^2.6.1",
     "knip": "^5.77.2",
     "lint-staged": "^16.2.7",
     "prettier": "^3.7.4",
-    "prettier-plugin-unused-imports-configurable": "^1.15.0",
     "rimraf": "^6.1.2",
     "rollup": "^4.54.0",
     "rollup-plugin-dts": "^6.3.0",
